Fix broken layout due to code blocks on smartphone

--- a/stylesheets/blog/article.css
+++ b/stylesheets/blog/article.css
@@ -73,6 +73,10 @@ code:not(.hljs) {
     vertical-align: 5%;
 }
 
+pre {
+    max-width: 90vw;
+}
+
 .hljs {
     border-radius: 10px;
     padding-left: 1.5em !important;
